Fix some alignment issues in node-wizard

--- a/assets/less/node-wizard.less
+++ b/assets/less/node-wizard.less
@@ -73,17 +73,10 @@
   padding: 0 16px 16px !important;
 }
 
-
-
-
-
-
-
-
 .node-wizard-logo-container {
   .flex-display;
 
-  justify-content: center;
+  .justify-content(center);
 
   img {
     @media @mobile {
@@ -99,7 +92,7 @@
 .node-wizard-choice-button-container {
   .flex-display;
   .flex-wrap(wrap);
-  justify-content: center;
+  .justify-content(center);
 
   margin: 16px 0;
   padding: 0 8px;
